--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tabler/icons-react": "^3.34.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.19.1",
     "lucide-react": "^0.511.0",
     "motion": "^12.19.1",
     "next": "15.3.2",
